# kive-ai

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: README_CN.md  cognee_providers.md
examples/: README.md  client_crud.py  memory_with_cognee.py  memory_with_graphiti.py  memory_with_mom0.py  server_quickstart.py
kive/: __init__.py  exceptions.py  memory.py  models.py
kive/adapters/: __init__.py  base.py  cognee_adapter.py  graphiti_adapter.py  llm_bridge.py  mem0_adapter.py  request_bridge.py
kive/adapters/extensions/: __init__.py
kive/adapters/extensions/graphiti/: __init__.py
kive/adapters/extensions/graphiti/drivers/: kuzu_indices.py
kive/adapters/extensions/graphiti/llm_clients/: bailian.py
kive/client/: __init__.py  client.py  http.py
kive/server/: __init__.py  engines.py  server.py
kive/server/adapters/: __init__.py  base.py  cognee_adapter.py  graphiti_adapter.py  mem0_adapter.py  request_bridge.py
kive/server/adapters/extensions/: README.md
kive/server/adapters/extensions/graphiti/drivers/: __init__.py  kuzu_indices.py
kive/server/adapters/extensions/graphiti/llm_clients/: __init__.py  bailian.py
kive/server/api/: __init__.py  routes.py
kive/server/cache/: __init__.py  memo_cache.py
kive/utils/: __init__.py  document.py  logger.py
scripts/: install_deps.ps1
